k8s/minikube/common/minio/deploy-minio.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gridcapa-minio
  labels:
    app: gridcapa
    component: gridcapa-minio

spec:
  selector:
    matchLabels:
      app: gridcapa
      component: gridcapa-minio
  template:
    metadata:
      labels:
        app: gridcapa
        component: gridcapa-minio
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: gridcapa-minio
          image: docker.io/bitnami/minio:2021.6.17
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: gridcapa-minio-data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: "1.0"
              memory: "350Mi"
            limits:
              cpu: "2.0"
              memory: "350Mi"
      restartPolicy: Always
      volumes:
        - name: gridcapa-minio-data
          persistentVolumeClaim:
            claimName: gridcapa-minio-storage
---
apiVersion: v1
kind: Service
metadata:
  name: gridcapa-minio
  labels:
    app: gridcapa
    component: gridcapa-minio
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: gridcapa-minio
  ports:
    - port: 9000
      name: browser
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minio
  labels:
    app: gridcapa
    component: gridcapa
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.farao-local-community.com
      secretName: gridcapa-tls
  rules:
    - host: minio.farao-local-community.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gridcapa-minio
                port:
                  number: 9000
